@@ -388,7 +388,7 @@ void state::md5deep_add_hash(char *h, char *fn)
     class file_data_t *fdt = new file_data_t();
     fdt->hash_hex[md5deep_mode_algorithm] = h; 
     fdt->file_name = fn;
-    known.add_fdt(fdt);
+    ocb.add_fdt(fdt);
 }
 
 
@@ -407,7 +407,7 @@ int state::finalize_matching()
   if (known.total_matched!=known.size()) status |= STATUS_UNUSED_HASHES; // were there any unmatched?
   if (known.total_matched==0) status |= STATUS_INPUT_DID_NOT_MATCH; // were they all unmatched?
   if (mode & mode_not_matched){	// should we display those that were not matched?
-      known.compute_unused(true,"");
+      ocb.compute_unused(true,"");
   }
   return status;
 }
@@ -477,7 +477,7 @@ int state::parse_encase_file(const char *fn, FILE *handle,uint32_t expected_hash
 	class file_data_t *fdt = new file_data_t();
 	fdt->hash_hex[md5deep_mode_algorithm] = result; 
 	fdt->file_name = fn;
-	known.add_fdt(fdt);
+	ocb.add_fdt(fdt);
     }
 
     if (expected_hashes != count){
@@ -547,7 +547,7 @@ void state::md5deep_load_match_file(const char *fn)
 	    file_data_t *fdt = new file_data_t();
 	    fdt->hash_hex[md5deep_mode_algorithm] = buf; // the hex hash
 	    fdt->file_name = known_fn;		    // the filename
-	    known.add_fdt(fdt);
+	    ocb.add_fdt(fdt);
 	}
     }
     fclose(f);
